--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,20 @@
   "name": "ArtSkills codestyle checker",
   "require": {
     "php": ">=5.6.0",
-    "phpunit/phpunit": "5.*",
+    "phpdocumentor/reflection-docblock": "@stable",
     "phpmd/phpmd": "@stable"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "5.*"
   },
   "autoload": {
     "psr-4": {
       "ArtSkills\\CodeStyle\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "ArtSkills\\Test\\": "tests"
     }
   }
 }
